# context-pointer-os

./: .gitignore  AGENTS.md  CITATION.cff  DEVELOPMENT_LOG.md  GEMINI.md  README.md  pyproject.toml
configs/: neurostate_action_gate.json
docs/: AI_AGENT_AS_COMPUTER.md  COMMERCIALIZATION_NOTES.md  NEUROSTATE_ACTION_GATE.md  SECURITY_ANALYSIS_v10.md  SPEC.md  specification_v0.1.md  specification_v0.3.md  specification_v1.0.md  specification_v10.0.md  specification_v2.0.md  specification_v5.0.md  specification_v6.0.md
experiments/: analyze_neurostate_r.py
experiments/ablation_neurostate/: COMPARISON_VPS_VS_CPOS.md  EXPERIMENT_MAP.md  NEXT_STEPS.md  NOTION_SUMMARY.md  PAPER_DRAFT.md  PAPER_OUTLINE.md  README.md  RELEASE_SUMMARY.md  REPRODUCIBILITY.md  RESULTS.md  SDE_V0_1.md  SHADOW_AUDITOR_V0_2.md  ZENODO_METADATA.md  _core_stub.py  build_paper_pdf.py  export_observatory.py  merge_llm_runs.py  run_ablation.py  run_cli_judge_baselines.py  run_external_baselines.py  run_llm_ablation.py  run_ollama_agent_pilot.py  run_ollama_auditor_pilot.py  run_tape_compiler_auditor_pilot.py
src/cpos/: acl.py  ait.py  boot.py  context_store.py  dashboard.py  demo.py  demo_core.py  demo_graph.py  demo_v02.py  demo_v03.py  demo_v04.py  demo_v05.py  demo_v06.py  (+54 more)
tests/: cpos_omega_battle.py  cpos_singularity_test.py  test_acl.py  test_advanced_scheduler.py  test_ait.py  test_branch.py  test_branch_new.py  test_core.py  test_ollama_agent_pilot.py  test_review_drafts.py  test_scheduler.py  test_scheduler_new.py  test_v26_features.py  test_v30_synthesis.py  ultimate_chaos_spear.py
(+31 files in other folders)
