[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-pointer-os"
version = "1.0.0"
description = "A Lightweight Virtual Memory Operating System for LLM Agents."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "kagioneko"}
]
dependencies = [
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]
